# impostor

./: .env.example  README.md  gamerules.md  main.py  pyproject.toml
flows/: impostor_flow.py
nodes/: AssignRoles.py  CheckGameStatus.py  Discuss.py  EndGame.py  ImpostorAction.py  Vote.py
utils/: call_llm.py
